src/objects/HR_Applicant__c.object
<CustomObject>
    <description>Used to managed job applicants.  Included in the App Cloud Harbor Cruise package.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Applicant_ID__c</fullName>
        <externalId>true</externalId>
        <label>Applicant ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HR_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_Applicant_HR_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Current_Employer__c</fullName>
        <defaultValue>&apos;Oracle&apos;</defaultValue>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Current_Title__c</fullName>
        <label>Current Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Technical Training</fullName>
                </value>
                <value>
                    <fullName>Degree in Progress - BS</fullName>
                </value>
                <value>
                    <fullName>Degree in Progress - MS</fullName>
                </value>
                <value>
                    <fullName>2 year college</fullName>
                </value>
                <value>
                    <fullName>4 year college</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Professional (MD, JD, CPA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HR_Headshot_Url__c</fullName>
        <label>Headshot Url</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_Hiring_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Location__c</fullName>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Manager_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Mobile_Phone__c</fullName>
        <defaultValue>&apos;415-555-1212&apos;</defaultValue>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HR_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Requisition</label>
        <referenceTo>HR_Job_Requisition__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>HR_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Resume__c</fullName>
        <label>Resume</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Review Resume</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule interview</fullName>
                </value>
                <value>
                    <fullName>Expend Offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>HR_Active_Applicants</fullName>
        <columns>NAME</columns>
        <columns>HR_Position__c</columns>
        <columns>HR_Current_Employer__c</columns>
        <columns>HR_Current_Title__c</columns>
        <columns>HR_Education__c</columns>
        <columns>HR_Mailing_State__c</columns>
        <columns>HR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HR_Status__c</field>
            <operation>equals</operation>
            <value>Review Resume,Phone Screen,Schedule interview</value>
        </filters>
        <label>Active/In Process Applicants</label>
    </listViews>
    <listViews>
        <fullName>HR_Hired_Applicants</fullName>
        <columns>NAME</columns>
        <columns>HR_Position__c</columns>
        <columns>HR_Current_Employer__c</columns>
        <columns>HR_Current_Title__c</columns>
        <columns>HR_Education__c</columns>
        <columns>HR_Mailing_State__c</columns>
        <columns>HR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HR_Status__c</field>
            <operation>equals</operation>
            <value>Expend Offer,Hired</value>
        </filters>
        <label>Hired Applicants</label>
    </listViews>
    <listViews>
        <fullName>HR_New_Applicants</fullName>
        <columns>NAME</columns>
        <columns>HR_Position__c</columns>
        <columns>HR_Current_Employer__c</columns>
        <columns>HR_Current_Title__c</columns>
        <columns>HR_Education__c</columns>
        <columns>HR_Mailing_State__c</columns>
        <columns>HR_Status__c</columns>
        <columns>HR_Location__c</columns>
        <columns>HR_Contact__c</columns>
        <columns>HR_Hiring_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HR_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Applicants</label>
    </listViews>
    <listViews>
        <fullName>HR_Rejected_Applicants</fullName>
        <columns>NAME</columns>
        <columns>HR_Current_Employer__c</columns>
        <columns>HR_Current_Title__c</columns>
        <columns>HR_Education__c</columns>
        <columns>HR_Mailing_State__c</columns>
        <columns>HR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HR_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected/Cancelled Applicants</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>